reverting widescreen changes due to alignment issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,6 +67,7 @@ body {
 }
 
 .logo-img {
+    max-width: 400px;
     width: 100%;
     height: 14vh;
 }
@@ -129,7 +130,7 @@ body {
     }
 }
 
-@media (min-width: 2000px) {
+/* @media (min-width: 2000px) {
     .tagline {
         font-size: 1.25vw;
         margin-top: 8vw;
@@ -143,7 +144,7 @@ body {
     .copyright{
         font-size: 0.75vw !important;
     }
-}
+} */
 
 @media (max-width: 991.98px) { /* Bootstrap lg breakpoint */
     .footer-content {
